instructions.InstructionsDrawG.scala.code
setCouleurBrosse(blue) 
baisseBrosse()
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(2)
gauche()
avance()
leveBrosse()
droite()
setPos(5,1)